--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "Node API Challenge",
     "main": "index.js",
     "scripts": {
-        "db:seed": "knex seed:run"
+        "db:seed": "knex seed:run",
+        "start": "node index.js",
+        "server": "nodemon index.js"
     },
     "repository": {
         "type": "git",
@@ -20,8 +22,15 @@
     },
     "homepage": "https://github.com/LambdaSchool/node-api-challenge#readme",
     "dependencies": {
+        "colors": "^1.4.0",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "gitignore": "^0.6.0",
         "helmet": "^4.1.0",
         "knex": "^0.21.5",
+        "morgan": "^1.10.0",
+        "nodemon": "^2.0.6",
         "sqlite3": "^5.0.0"
     },
     "devDependencies": {
